--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -47,6 +47,138 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\RobotControlScript.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\BipedIK\BipedIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\BipedIK\BipedIKSolvers.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Constraints\Constraint.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Constraints\ConstraintPosition.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Constraints\ConstraintPositionOffset.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Constraints\ConstraintRotation.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Constraints\ConstraintRotationOffset.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Constraints\Constraints.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\DoxygenManualFinalIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Grounder\Grounder.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Grounder\GrounderBipedIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Grounder\GrounderFBBIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Grounder\GrounderIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Grounder\GrounderQuadruped.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Grounder\Grounding.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Grounder\GroundingLeg.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Grounder\GroundingPelvis.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Components\AimIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Components\CCDIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Components\FABRIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Components\FABRIKRoot.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Components\FullBodyBipedIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Components\IK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Components\LimbIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Components\LookAtIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Components\TrigonometricIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\FABRIKChain.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\FBIKChain.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKConstraintBend.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKEffector.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKMapping.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKMappingBone.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKMappingLimb.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKMappingSpine.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKSolver.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKSolverAim.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKSolverCCD.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKSolverFABRIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKSolverFABRIKRoot.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKSolverFullBody.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKSolverFullBodyBiped.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKSolverHeuristic.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKSolverLimb.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKSolverLookAt.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\IKSolverTrigonometric.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\IK Solvers\SolverManager.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\InteractionSystem\InteractionEffector.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\InteractionSystem\InteractionLookAt.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\InteractionSystem\InteractionObject.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\InteractionSystem\InteractionSystem.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\InteractionSystem\InteractionTarget.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\InteractionSystem\InteractionTrigger.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\InteractionSystem\Poser.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Rotation Limits\RotationLimit.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Rotation Limits\RotationLimitAngle.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Rotation Limits\RotationLimitHinge.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Rotation Limits\RotationLimitPolygonal.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\Rotation Limits\RotationLimitSpline.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Aim IK\Scripts\AimBoxing.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Aim IK\Scripts\CharacterControllerSimpleAim.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Aim IK\Scripts\SimpleAimingSystem.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Aim IK\Scripts\TerrainOffset.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Biped IK\Scripts\BipedIKvsAnimatorIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\CCD IK\Scripts\MechSpider.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\CCD IK\Scripts\MechSpiderController.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\CCD IK\Scripts\MechSpiderLeg.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\CCD IK\Scripts\MechSpiderParticles.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\Amplifier.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\AnimatorController3rdPerson.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\AnimatorController3rdPersonIK.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\BodyTilt.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\CarryBoxDemo.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\CharacterController3rdPerson.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\EffectorOffset.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\ExplosionDemo.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\FBBIKSettings.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\FBIKBendGoal.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\FBIKBoxing.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\FBIKDrivingRig.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\FBIKHandsOnProp.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\FPSAiming.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\FPSCharacter.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\HitReaction.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\HitReactionCharacter.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\HoldingHands.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\Inertia.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\InteractionC2CDemo.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\InteractionDemo.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\InteractionSystemTestGUI.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\KissingRig.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\MotionAbsorb.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\MotionAbsorbCharacter.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\OffsetEffector.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\OffsetModifier.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\OffsetPose.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\PendulumExample.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\PickUp2Handed.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\PickUpBox.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\PickUpSphere.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\ResetInteractionObject.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\ShoulderRotator.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\TouchWalls.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\FBBIK\Scripts\UserControlInteractions.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Grounder\Scripts\CharacterAnimationEthan.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Grounder\Scripts\CharacterAnimationSimpleLegacy.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Grounder\Scripts\CharacterAnimationThirdPerson.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Grounder\Scripts\GrounderDemo.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Grounder\Scripts\PlatformRotator.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Limb IK\Scripts\Limb IK Bend Goal\BendGoal.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Rotation Limits\Scripts\Turret.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\Aim Poser\AimPoser.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\CameraController.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\CameraControllerFPS.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\CharacterAnimationBase.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\CharacterBase.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\CharacterControllerBase.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\CharacterControllerDefault.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\CharacterControllerLegacy.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\CharacterThirdPerson.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\GenericPoser.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\HandPoser.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\IKExecutionOrder.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\SlowMo.cs" />
+     <Compile Include="Assets\RootMotion\FinalIK\_DEMOS\Shared\Scripts\UserControlThirdPerson.cs" />
+     <Compile Include="Assets\RootMotion\Scripts\BipedLimbOrientations.cs" />
+     <Compile Include="Assets\RootMotion\Scripts\BipedNaming.cs" />
+     <Compile Include="Assets\RootMotion\Scripts\BipedReferences.cs" />
+     <Compile Include="Assets\RootMotion\Scripts\Hierarchy.cs" />
+     <Compile Include="Assets\RootMotion\Scripts\Interp.cs" />
+     <Compile Include="Assets\RootMotion\Scripts\QuaTools.cs" />
+     <Compile Include="Assets\RootMotion\Scripts\V3Tools.cs" />
+     <Compile Include="Assets\RootMotion\Scripts\Warning.cs" />
      <Compile Include="Assets\SimpleJSON.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
